RESOLVED FIXED154157
Table border radius is not applied when the border color is transparent or semitransparent
https://bugs.webkit.org/show_bug.cgi?id=154157
Summary Table border radius is not applied when the border color is transparent or se...
Alan Sprecacenere
Reported 2016-02-12 00:29:04 PST
Created attachment 271141 [details] Test case Using a transparent or a semitransparent border color on a table prevents the border radius to be applied. I found this while styling a Dojo SelectBox widget, which uses a table as the root node. Test case attached.
Attachments
Test case (995 bytes, text/html)
2016-02-12 00:29 PST, Alan Sprecacenere
no flags
Patch (4.50 KB, patch)
2022-07-14 21:43 PDT, Fujii Hironori
ews-feeder: commit-queue-
WIP patch (3.02 KB, patch)
2022-07-20 17:54 PDT, Fujii Hironori
no flags
Patch (4.38 KB, patch)
2022-07-21 23:30 PDT, Fujii Hironori
no flags
Simon Fraser (smfr)
Comment 1 2017-05-05 10:27:14 PDT
Dup of bug 171244?
Alan Sprecacenere
Comment 2 2017-05-08 00:13:30 PDT
It looks like so.
Simon Fraser (smfr)
Comment 3 2017-05-08 10:17:59 PDT
*** Bug 171244 has been marked as a duplicate of this bug. ***
Brent Fulgham
Comment 4 2022-07-14 15:21:04 PDT
This continues to be a bug in Safari 15.5+
Radar WebKit Bug Importer
Comment 5 2022-07-14 15:21:15 PDT
Fujii Hironori
Comment 6 2022-07-14 21:43:22 PDT
Simon Fraser (smfr)
Comment 7 2022-07-15 09:23:16 PDT
Comment on attachment 460922 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=460922&action=review > Source/WebCore/rendering/RenderTable.cpp:-803 > - if (style().hasVisibleBorderDecoration() && !collapseBorders()) > - paintBorder(paintInfo, rect, style()); Do these lines do anything special compared to the base class implementation? Do we have a test that hits this case?
Fujii Hironori
Comment 8 2022-07-18 18:10:06 PDT
Comment on attachment 460922 [details] Patch Yes, it does. Some old pixel tests covered. I should add a ref test.
Fujii Hironori
Comment 9 2022-07-20 17:54:31 PDT
Created attachment 461064 [details] WIP patch
Fujii Hironori
Comment 10 2022-07-21 23:30:20 PDT
EWS
Comment 11 2022-07-22 13:14:11 PDT
Committed 252741@main (96f929df42d3): <https://commits.webkit.org/252741@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 461132 [details].
Note You need to log in before you can comment on or make changes to this bug.