Table border radius is not applied when the border color is transparent or semitransparent https://bugs.webkit.org/show_bug.cgi?id=154157

Reviewed by Simon Fraser.

RenderTable::paintBoxDecorations also should create a transparency
layer if determineBackgroundBleedAvoidance returns
BackgroundBleedUseTransparencyLayer as well as
RenderBox::paintBoxDecorations does.

* LayoutTests/fast/table/table-border-radius-expected.html: Added.
* LayoutTests/fast/table/table-border-radius.html: Added.
* Source/WebCore/rendering/RenderTable.cpp:
(WebCore::RenderTable::paintBoxDecorations):

Canonical link: https://commits.webkit.org/252741@main